--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ numpy
 pandas
 opencv-python
 Pillow
-torch
-tensorflow
+torch==2.0.1
+tensorflow-cpu==2.12.0
 rich==14.0.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
